--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,7 @@
 *.txt
 *.log
 *.sh
-CCC_FELA_models.py
-CCC_FELA_remote_db_connect.py
-CCC_system_setup.py
-CCC_OSLM_models.py
-CCC_OSLM_remote_db_connect.py
+CCC*
 textcleaner
 remote_db_connect.py
 /incoming
